--- a/student.html
+++ b/student.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World from Siphosakhe(2583003)</h1>
+    <h1>Hello World from Siphosakhe(2583003)</h1><!--This is a good greeting-->
 </body>
 </html>
