--- a/lab2.html
+++ b/lab2.html
@@ -20,19 +20,19 @@
     <section class="first">
         <h3>About Us</h3>
         <p>We are a company dedicated to providing excellent services to our customers</p>
-        <img src="/images/web-design-concept-with-drawings.jpg">
+        <img src="images/web-design-concept-with-drawings.jpg">
         <h3>Our Services</h3>
     </section>
     <section class="second">  
         <section>
             <h3>Web Development</h3>
             <p>We specialize in creating responsive and user-friendly websites</p>
-            <img src="/images/4884785.jpg">
+            <img src="images/4884785.jpg">
         </section>
         <section>
             <h3>Graphic Design</h3>
             <p>Our talented designers can bring your ideas to life with stunning visuals</p>
-            <img src="/images/web-design-technology-browsing-programming-concept.jpg">
+            <img src="images/web-design-technology-browsing-programming-concept.jpg">
         </section>
     </section>
     <footer>
