--- a/lab2.html
+++ b/lab2.html
@@ -23,7 +23,7 @@
         <img src="images/web-design-concept-with-drawings.jpg">
         <h3>Our Services</h3>
     </section>
-    <section class="second">  
+    <article class="second">  
         <section>
             <h3>Web Development</h3>
             <p>We specialize in creating responsive and user-friendly websites</p>
@@ -34,7 +34,7 @@
             <p>Our talented designers can bring your ideas to life with stunning visuals</p>
             <img src="images/web-design-technology-browsing-programming-concept.jpg">
         </section>
-    </section>
+    </article>
     <footer>
         <p>© The Mkhwanazi Company. All rights reserved.</p>
     </footer>
