--- a/lab2.html
+++ b/lab2.html
@@ -21,8 +21,8 @@
         <h3>About Us</h3>
         <p>We are a company dedicated to providing excellent services to our customers</p>
         <img src="images/web-design-concept-with-drawings.jpg">
-        <h3>Our Services</h3>
     </section>
+    <h3 class="title">Our Services</h3>
     <article class="second">  
         <section>
             <h3>Web Development</h3>
